posiGen_FullsendBox/src/objects/Commissioning__c.object
<CustomObject>
    <description>Custom object created by EnablePath to handle Commissionings</description>
    <fields>
        <fullName>AC_Amperage__c</fullName>
        <label>AC Amperage</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AC_Power_Output__c</fullName>
        <label>AC Power Output</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Commissioning</relationshipLabel>
        <relationshipName>Commissioning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commissioning_Date__c</fullName>
        <label>Commissioning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Commissioning</relationshipLabel>
        <relationshipName>Commissioning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DC_Amperage_String_1__c</fullName>
        <label>DC Amperage String 1</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Amperage_String_2__c</fullName>
        <label>DC Amperage String 2</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Voltage_String_1_OO__c</fullName>
        <label>DC Voltage String 1 (OO)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Voltage_String_1__c</fullName>
        <label>DC Voltage String 1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Voltage_String_2_OO__c</fullName>
        <label>DC Voltage String 2 (OO)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Voltage_String_2__c</fullName>
        <label>DC Voltage String 2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KWH_1__c</fullName>
        <label>Energy recorded by channel 01</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KWH_2__c</fullName>
        <label>Energy recorded by channel 02</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_L2__c</fullName>
        <label>Line 1 To Line 2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_L1__c</fullName>
        <label>Neutral To Line 1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_L2__c</fullName>
        <label>Neutral To Line 2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Meter_DEL__c</fullName>
        <description>Energy delivered from utility to customer</description>
        <inlineHelpText>Energy delivered from utility to customer</inlineHelpText>
        <label>Net Meter DEL</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Meter_REC__c</fullName>
        <description>Energy received by utility from customer</description>
        <inlineHelpText>Energy received by utility from customer</inlineHelpText>
        <label>Net Meter REC</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neutral_to_Ground__c</fullName>
        <label>Neutral to Ground</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commissioning</relationshipLabel>
        <relationshipName>Commissioning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solar_Meter_Communication_Code__c</fullName>
        <label>Solar Meter Communication Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Meter_Serial__c</fullName>
        <label>Solar Meter Serial</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Commissioning</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>Commissioning_Date__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COMM-{0000000}</displayFormat>
        <label>Commissioning ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissioning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>